fixed vAlign=top (#1095)
* fixed vAlign=top

* chore(RadioGroup): remove console.warn

no longer needed thanks to Roeia1 :)

--- a/src/RadioGroup/RadioGroup.scss
+++ b/src/RadioGroup/RadioGroup.scss
@@ -172,3 +172,9 @@ button.radioButton {
     flex-direction: row-reverse;
   }
 }
+
+.radio-button-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
